home page mockup complete

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -2,9 +2,8 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
         <hr>
-        Department of Information and Computer Sciences <br />
-        University of Hawaii<br />
-        Honolulu, HI 96822
+        Created by Victor Pawid <br/>
+        Inspired by Digits experience in ICS 314<br/>
     </div>
   </footer>
 </template>
