--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -1,7 +1,8 @@
 <template name="Header">
-    <div class="ui top fixed borderless inverted menu">
+  <img style="max-height: 300px" class="ui fluid image" src="/images/pic.png">
+    <div style="margin: 0px; border-radius: 0px" class="ui borderless inverted menu">
   <div class="ui container">
-      <a class="item" href="{{pathFor 'Home_Page'}}"><h1>meteor-application-template</h1></a>
+      <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Digits</h1></a>
       {{#if currentUser}}
         <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff </a>
         <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
